@@ -1,158 +1,138 @@
 package seng202.team6.controller;
 
 import com.google.gson.Gson;
-import javafx.event.ActionEvent;
-import javafx.fxml.FXML;
-import javafx.geometry.HPos;
-import javafx.scene.Parent;
-import javafx.scene.control.Button;
-import javafx.scene.control.TextField;
-import javafx.scene.control.TitledPane;
-import javafx.scene.layout.BorderPane;
-import javafx.scene.layout.GridPane;
-import javafx.scene.text.Text;
-import javafx.scene.web.WebEngine;
-import javafx.scene.web.WebView;
-import javafx.stage.Stage;
-import netscape.javascript.JSObject;
-import org.json.simple.JSONArray;
-import org.json.simple.JSONObject;
-import org.json.simple.parser.JSONParser;
-import org.json.simple.parser.ParseException;
-
 import java.io.IOException;
 import java.net.URI;
 import java.net.URLEncoder;
 import java.net.http.HttpClient;
 import java.net.http.HttpRequest;
 import java.net.http.HttpResponse;
+import java.nio.charset.StandardCharsets;
 import java.time.Duration;
 import java.util.ArrayList;
+import java.util.Objects;
+import javafx.event.ActionEvent;
+import javafx.fxml.FXML;
+import javafx.geometry.HPos;
+import javafx.scene.Parent;
+import javafx.scene.control.Button;
+import javafx.scene.control.TextField;
+import javafx.scene.layout.BorderPane;
+import javafx.scene.layout.GridPane;
+import javafx.scene.layout.Priority;
+import javafx.scene.layout.RowConstraints;
+import javafx.scene.text.Font;
+import javafx.scene.text.Text;
+import javafx.stage.Stage;
+import org.json.simple.JSONArray;
+import org.json.simple.JSONObject;
+import org.json.simple.parser.JSONParser;
+import org.json.simple.parser.ParseException;
 
 /**
  * Controller for the map toolbar.
  */
 public class MapToolBarController implements ScreenController {
-
-
+    /**
+     * Border pane that hold the filter section on map toolbar.
+     */
+    @FXML
     public BorderPane filterSectionOnMapToolBar;
-    public TitledPane addStationSection;
+    /**
+     * The grid pane that hold the find routes texts.
+     */
+    @FXML
     public GridPane planTripGridPane;
+    /**
+     * Button that click to load the text box.
+     */
+    @FXML
     public Button addStopButton;
+    /**
+     * Button that click to autofill the start location on text.
+     */
+    @FXML
     public Button startAutoFill;
+    /**
+     * Button that click to autofill the end location on text.
+     */
+    @FXML
     public Button endAutoFill;
+    /**
+     * Button that click to find the route.
+     */
+    @FXML
     public Button findRouteButton;
-
+    /**
+     * the text for the start location.
+     */
+    @FXML
     public Text startLabel;
+    /**
+     * the text for the end location.
+     */
+    @FXML
     public Text endLabel;
+    /**
+     * Button is clicked to remove the route from the map.
+     */
+    @FXML
     public Button removeRouteButton;
-
-    @FXML
-    private Button[] addButton = new Button[15];
-
-    private Stage stage;
     private MainScreenController controller;
-
-    private JSObject javaScriptConnector;
-
     @FXML
-    private WebView webView;
-    private WebEngine webEngine;
-
+    private TextField startLocation;
     @FXML
-    private TextField newStationTitle;
-
-    @FXML
-    private TextField newStationLatitude;
-
-    @FXML
-    private TextField newStationLongitude;
-
-    @FXML
-    public TextField startLocation;
-
-
-    @FXML
-    public TextField endLocation;
-
-    @FXML
-    private Button newStationButton;
-
-    private ArrayList<Button> addAddressButton = new ArrayList<Button>();
-
-    private ArrayList<TextField>  arrayOfTextFields = new ArrayList<TextField>();
-    private ArrayList<String> addressMarkerTitles = new ArrayList<String>();
-    private ArrayList<ArrayList<Float>> addressMarkerLatLng = new ArrayList<ArrayList<Float>>();
-
-    private int numAddresses;
-
-
+    private TextField endLocation;
+    private ArrayList<Button> addAddressButton = new ArrayList<>();
+    private ArrayList<TextField>  arrayOfTextFields = new ArrayList<>();
+    private ArrayList<String> addressMarkerTitles = new ArrayList<>();
+    private ArrayList<ArrayList<Double>> addressMarkerLatLng = new ArrayList<>();
+    private int numAddresses = 2;
     /**
      * Initializes the controller.
-     * @param stage Primary Stage of the application
+     * @param stage Primary Stage of the application.
      * @param controller The Controller class for the main screen.
      */
+
     @Override
     public void init(Stage stage, MainScreenController controller) {
-        this.stage = stage;
         this.controller = controller;
 
         arrayOfTextFields.add(startLocation);
         addressMarkerTitles.add(null);
-        ArrayList<Float> start = new ArrayList<Float>();
+        ArrayList<Double> start = new ArrayList<>();
         start.add(null);
         start.add(null);
         addressMarkerLatLng.add(start);
 
         arrayOfTextFields.add(endLocation);
         addressMarkerTitles.add(null);
-        ArrayList<Float> end = new ArrayList<Float>();
+        ArrayList<Double> end = new ArrayList<>();
         end.add(null);
         end.add(null);
         addressMarkerLatLng.add(end);
 
         addAddressButton.add(addStopButton);
         addStopButton.setOnAction(event -> insertAddressFieldAndButton(addStopButton));
-        startAutoFill.setOnAction(event -> eHAutoFill(startLocation));
-        endAutoFill.setOnAction(event -> eHAutoFill(endLocation));
+        startAutoFill.setOnAction(event -> autoFillEventHandler(startLocation));
+        endAutoFill.setOnAction(event -> autoFillEventHandler(endLocation));
 
-    }
-
-
-    /**
-     * Encodes the passed String as UTF-8 using an algorithm that's compatible
-     * with JavaScript's encodeURIComponent function.
-     * @param s The String to be encoded
-     * @return the encoded String
-     */
-    public static String encodeURI(String s) {
-        String result;
-        try {
-            result = URLEncoder.encode(s, "UTF-8").replaceAll("\\+", "%20").replaceAll("\\%21", "!")
-                    .replaceAll("\\%27", "'").replaceAll("\\%28", "(").replaceAll("\\%29", ")")
-                    .replaceAll("\\%7E", "~");
-        } // This exception should never occur.
-        catch (Exception e) {
-            result = s;
-        }
-
-        return result;
     }
 
     private JSONObject geoCode(String query) throws IOException, InterruptedException {
         HttpClient httpClient = HttpClient.newHttpClient();
 
         String encodedQuery = null;
-        encodedQuery = URLEncoder.encode(query,"UTF-8");
+        encodedQuery = URLEncoder.encode(query, StandardCharsets.UTF_8);
         String apiKey = "NdSNzsRJvYIyENlbzYj4XzOfYj0iK2Tv0lh0hLxky0w";
 
         String requestUri = "https://geocode.search.hereapi.com/v1/geocode" + "?apiKey=" + apiKey + "&q=" + encodedQuery;
 
         HttpRequest geocodingRequest = HttpRequest.newBuilder().GET().uri(URI.create(requestUri))
                 .timeout(Duration.ofMillis(2000)).build();
-
-        HttpResponse geocodingResponse = httpClient.send(geocodingRequest, HttpResponse.BodyHandlers.ofString());
-        String jsonString = (String) geocodingResponse.body();
+        HttpResponse<String> geocodingResponse = httpClient.send(geocodingRequest,
+                HttpResponse.BodyHandlers.ofString());
+        String jsonString =  geocodingResponse.body();
         JSONParser parser = new JSONParser();
         JSONObject jsonResponse = null;
         try {
@@ -161,23 +141,25 @@ public class MapToolBarController implements ScreenController {
             throw new RuntimeException(e);
         }
         JSONArray items = (JSONArray) jsonResponse.get("items");
-        JSONObject bestResult = (JSONObject) items.get(0);
-        JSONObject bestPosition = (JSONObject) bestResult.get("position");
-        return bestPosition;
+        if (items.isEmpty()) {
+            return null;
+        } else {
+            JSONObject bestResult = (JSONObject) items.get(0);
+            return (JSONObject) bestResult.get("position");
+        }
     }
 
     /**
      * This function goes through the text fields of locations,
      * calls geocode to get the longitude and latitude,
      * calls add route function with the list of longitude and latitudes.
-     * @param actionEvent When find route button is clicked
+     * @param actionEvent When find route button is clicked.
      */
     public void findRoute(ActionEvent actionEvent) {
-        javaScriptConnector = controller.getMapController().getJavaScriptConnector();
-        ArrayList<JSONObject>  posArray = new ArrayList<JSONObject>();
+        ArrayList<JSONObject>  posArray = new ArrayList<>();
         for (TextField textField : arrayOfTextFields) {
             try {
-                if (textField.getText() !="") {
+                if (!Objects.equals(textField.getText(), "")) {
                     JSONObject location = geoCode(textField.getText());
                     posArray.add(location);
                 }
@@ -185,33 +167,47 @@ public class MapToolBarController implements ScreenController {
                 e.printStackTrace();
             }
         }
-        if (posArray.size()>=2) {
+        boolean validAddresses = true;
+        if (posArray.contains(null)) {
+            validAddresses = false;
+        }
+        if (posArray.size() >= 2 && validAddresses) {
             String json = new Gson().toJson(posArray);
             controller.getMapController().getJavaScriptConnector().call("addRoute", json);
+        } else if (!validAddresses) {
+            AlertMessage.createMessage("Invalid Address Entered.",
+                    "Please input at least two valid destinations.");
         } else {
-            AlertMessage.createMessage("Incorrect number of addresses.", "Please input at least two destinations.");
+            AlertMessage.createMessage("Incorrect number of addresses.",
+                    "Please input at least two destinations.");
         }
     }
 
+    /**
+     * Display filter screen on the map toolbar.
+     * @param screen the screen that want to display.
+     */
     public void setFilterSectionOnMapToolBar(Parent screen) {
         this.filterSectionOnMapToolBar.setCenter(screen);
     }
 
-    public void showTable(ActionEvent actionEvent) {
-    }
-
     /**
-     * ??
+     * Sets text field to selected marker on the map as well as adding a routing marker
+     * at that point. Method called when user selects auto-fill button. Takes the
+     * address, latitude, and longitude from the current location of the marker, sets
+     * the associated text-feild to contain the given address. Calls the
+     * javascriptconnecter to replace all current address markers on the map with
+     * the updated one.
      *
-     * @param field
+     * @param field The text field being filled.
      */
-    public void eHAutoFill(TextField field) {
+    public void autoFillEventHandler(TextField field) {
 
         field.setText(controller.getMapController().getAddress());
         int fieldIndex = arrayOfTextFields.indexOf(field);
 
         addressMarkerTitles.set(fieldIndex, controller.getMapController().getAddress());
-        ArrayList<Float> current = new ArrayList<Float>();
+        ArrayList<Double> current = new ArrayList<>();
         current.add(controller.getMapController().getLatLng()[0]);
         current.add(controller.getMapController().getLatLng()[1]);
         addressMarkerLatLng.set(fieldIndex, current);
@@ -221,12 +217,12 @@ public class MapToolBarController implements ScreenController {
         int i = 0;
         for (String address : addressMarkerTitles) {
             if (address != null) {
-                controller.getMapController().getJavaScriptConnector().call("addRoutingMarker", addressMarkerTitles.get(i),
+                controller.getMapController().getJavaScriptConnector().call(
+                        "addRoutingMarker", addressMarkerTitles.get(i),
                         addressMarkerLatLng.get(i).get(0), addressMarkerLatLng.get(i).get(1));
             }
             i++;
         }
-
     }
 
     /**
@@ -235,35 +231,61 @@ public class MapToolBarController implements ScreenController {
      * @param button When add stop button is clicked.
      */
     public void insertAddressFieldAndButton(Button button) {
-        planTripGridPane.getChildren().remove(endLabel);
-        planTripGridPane.getChildren().remove(findRouteButton);
-        planTripGridPane.getChildren().remove(addStopButton);
-        planTripGridPane.getChildren().remove(removeRouteButton);
+        if (numAddresses == 5) {
+            AlertMessage.createMessage("Maximum number of stops reached.",
+                    "Unable to add more stops.");
+        } else {
+            numAddresses++;
 
-        TextField addOneTextField = new TextField();
-        addOneTextField.setVisible(true);
-        arrayOfTextFields.add(addOneTextField);
+            planTripGridPane.getChildren().remove(endLabel);
+            planTripGridPane.getChildren().remove(findRouteButton);
+            planTripGridPane.getChildren().remove(addStopButton);
+            planTripGridPane.getChildren().remove(removeRouteButton);
 
-        //Adds the lat and long of the corresponding text field to null because it has not yet been autofilled
-        ArrayList<Float> current = new ArrayList<Float>();
-        current.add(null);
-        current.add(null);
-        addressMarkerLatLng.add(current);
-        addressMarkerTitles.add(null);
+            TextField addOneTextField = new TextField();
+            addOneTextField.setFont(Font.font(13));
+            addOneTextField.setVisible(true);
 
-        Button autoFillButton = new Button("Auto-Fill");
-        GridPane.setHalignment(autoFillButton, HPos.RIGHT);
-        autoFillButton.setVisible(true);
-        //autoFillButton.
-        autoFillButton.setOnAction(e -> eHAutoFill(addOneTextField));
+            arrayOfTextFields.add(addOneTextField);
 
-        int row = planTripGridPane.getRowIndex(button);
-        planTripGridPane.add(addOneTextField, 0,row + 2);
-        planTripGridPane.add(autoFillButton, 0, row + 1);
-        planTripGridPane.add(endLabel, 0, row + 1);
-        planTripGridPane.add(findRouteButton, 0,row + 3);
-        planTripGridPane.add(addStopButton, 0,row + 3);
-        planTripGridPane.add(removeRouteButton, 0, row + 3);
+            //Adds the lat and long of the corresponding text field to
+            // null because it has not yet been autofilled
+            ArrayList<Double> current = new ArrayList<>();
+            current.add(null);
+            current.add(null);
+            addressMarkerLatLng.add(current);
+            addressMarkerTitles.add(null);
+
+            Button autoFillButton = new Button("Auto-Fill");
+            autoFillButton.setFont(Font.font(15));
+            GridPane.setHalignment(autoFillButton, HPos.RIGHT);
+            autoFillButton.setVisible(true);
+            autoFillButton.setOnAction(e -> autoFillEventHandler(addOneTextField));
+
+            RowConstraints firstRow = new RowConstraints();
+            firstRow.fillHeightProperty();
+            firstRow.setVgrow(Priority.SOMETIMES);
+            firstRow.setMinHeight(40);
+            firstRow.setPrefHeight(40);
+            firstRow.setMaxHeight(40);
+            planTripGridPane.getRowConstraints().add(firstRow);
+
+            RowConstraints secondRow = new RowConstraints();
+            secondRow.fillHeightProperty();
+            secondRow.setVgrow(Priority.SOMETIMES);
+            secondRow.setMinHeight(40);
+            secondRow.setPrefHeight(40);
+            secondRow.setMaxHeight(40);
+            planTripGridPane.getRowConstraints().add(secondRow);
+
+            int row = GridPane.getRowIndex(button);
+            planTripGridPane.add(addOneTextField, 0,row + 1);
+            planTripGridPane.add(autoFillButton, 0, row);
+            planTripGridPane.add(endLabel, 0, row);
+            planTripGridPane.add(findRouteButton, 0,row + 2);
+            planTripGridPane.add(addStopButton, 0,row + 2);
+            planTripGridPane.add(removeRouteButton, 0, row + 2);
+        }
 
     }
 
@@ -276,7 +298,14 @@ public class MapToolBarController implements ScreenController {
      */
     public void removeRoute(ActionEvent actionEvent) {
         controller.getMapController().getJavaScriptConnector().call("removeRoute");
-        planTripGridPane.getChildren().removeAll(planTripGridPane.getChildren().stream().toList());
+        planTripGridPane.getChildren().clear();
+
+        while (numAddresses > 2) {
+            int num = planTripGridPane.getRowConstraints().size();
+            planTripGridPane.getRowConstraints().remove(num - 1);
+            planTripGridPane.getRowConstraints().remove(num - 2);
+            numAddresses--;
+        }
 
         planTripGridPane.add(startLabel, 0, 0);
         planTripGridPane.add(startAutoFill, 0, 0);
